# panfork-mesa-22

./: .gitlab-ci-fork.yml  meson.build  meson_options.txt  nv162-main-cd39180cfa  nv162-mr-13883  tmp.patch
.gitlab-ci/: fork-build.sh
docs/: features.txt
include/drm-uapi/: panfrost_drm.h
src/: meson.build
src/compiler/clc/: clc_helpers.cpp
src/compiler/glsl/: standalone_scaffolding.cpp
src/compiler/nir/: nir.h  nir_lower_int64.c  nir_lower_memcpy.c  nir_lower_tex.c  nir_opcodes.py
src/compiler/spirv/: spirv_to_nir.c  vtn_opencl.c
src/drm-shim/: device.c
src/egl/: meson.build
src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  platform_wayland.c
src/gallium/auxiliary/cso_cache/: cso_context.c
src/gallium/auxiliary/driver_trace/: tr_context.c  tr_screen.c
src/gallium/auxiliary/nir/: tgsi_to_nir.c
src/gallium/auxiliary/pipe-loader/: driinfo_gallium.h  pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  inline_sw_helper.h  sw_helper.h
src/gallium/auxiliary/util/: u_driconf.c
src/mesa/state_tracker/: st_cb_texture.c  st_context.c  st_context.h  st_extensions.c  st_format.c
src/panfrost/: meson.build
src/panfrost/base/: pan_vX_base.c
src/panfrost/bifrost/: bi_helper_invocations.c  bi_liveness.c  bi_opt_dce.c  bi_opt_push_ubo.c  bi_pack.c  bi_print.c  bi_ra.c  bi_schedule.c  bi_scoreboard.c  bi_test.h  bi_validate.c  bifrost.h  bifrost_compile.c  bir.c  cmdline.c  compiler.h  disassemble.c  gen_assemble.py  meson.build  nodearray.h
src/panfrost/bifrost/test/: test-nodearray.cpp
src/panfrost/ci/: panfrost-g52-fails.txt
src/panfrost/lib/: meson.build  pan_afbc.c  pan_blend.c  pan_blend.h  pan_blitter.c  pan_blitter.h  pan_bo.c  pan_bo.h  pan_core.c  pan_core.h  pan_cs.c  pan_cs.h  pan_device.h  pan_emu.h  pan_emu_tiler.c  pan_encoder.h  pan_indirect_dispatch.c  pan_indirect_draw.c  pan_kernel.c  pan_kernel.h  pan_props.c  pan_replay.c  pan_scoreboard.h  pan_shader.c  pan_texture.c  pan_texture.h  pan_tiler.c  pan_util.h  wrap.h
src/panfrost/lib/genxml/: decode.c  decode.h  decode_common.c  gen_pack.py  meson.build  v10.xml  v4.xml  v5.xml  v6.xml  v7.xml  v9.xml
src/panfrost/midgard/: compiler.h  disassemble.c  midgard.h  midgard_compile.c  midgard_compile.h  midgard_emit.c  midgard_helper_invocations.c  midgard_nir_algebraic.py  midgard_ops.c  midgard_print.c  midgard_print_constant.c  midgard_ra.c  midgard_schedule.c  mir.c
src/panfrost/shared/: pan_tiling.c
src/panfrost/util/: magic_function.cl  magic_function.h  pan_clc.c  pan_ir.c  pan_ir.h  pan_liveness.c  pan_sysval.c
src/panfrost/vulkan/: panvk_device.c  panvk_vX_cmd_buffer.c  panvk_vX_cs.c  panvk_vX_meta_clear.c  panvk_vX_meta_copy.c  panvk_vX_pipeline.c  panvk_vX_shader.c
src/util/: driconf.h  macros.h  meson.build  os_misc.c  ralloc.c  u_debug_stack_android.cpp  u_printf.c  u_printf.cpp
(+46 files in other folders)
